WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
142646
REGRESSION(
r180726
): Removing an empty line at the end of textarea clears the entire textarea
https://bugs.webkit.org/show_bug.cgi?id=142646
Summary
REGRESSION(r180726): Removing an empty line at the end of textarea clears the...
Ryosuke Niwa
Reported
2015-03-12 15:56:36 PDT
Removing an empty line at the end of a textare deletes all text in the textarea.
Attachments
Fixes the bug
(6.25 KB, patch)
2015-03-12 16:38 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2015-03-12 16:38:09 PDT
Created
attachment 248554
[details]
Fixes the bug
WebKit Commit Bot
Comment 2
2015-03-12 17:57:42 PDT
Comment on
attachment 248554
[details]
Fixes the bug Clearing flags on attachment: 248554 Committed
r181465
: <
http://trac.webkit.org/changeset/181465
>
WebKit Commit Bot
Comment 3
2015-03-12 17:57:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug